# engagement_detector

./: .gitattributes  CMakeLists.txt  README.md  download_model.sh  package.xml  setup.cfg  setup.py
.devcontainer/: Dockerfile  devcontainer.json  run.sh
.github/workflows/: devcontainer-ci.yml  ros-ci.yml
engagement_detector/: engagement_detector.py  ros_engagement_detector.py  time_serie_in_image.py  webcam.py
launch/: engagement_detector.launch
models/: lstm_10_50_runsigm_runsigm.h5
scripts/: ROSEngagementDetector.py  TimeSerieInImage.py  engagement_detector.py
src/engagement_detector/: engagement_detector.py  ros_engagement_detector.py  time_serie_in_image.py
