<?xml version="1.0"?>
<package format="3">
  <name>engagement_detector</name>
  <version>1.0.0</version>
  <description>The engagement_detector package</description>

  <maintainer email="fdelduchetto@lincoln.ac.uk">Francesco Del Duchetto</maintainer>

  <license>Apache License 2.0</license>

  <author email="fdelduchetto@lincoln.ac.uk">Francesco Del Duchetto</author> 

  <depend>ament_python</depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>launch_pytest</test_depend>

  <depend>python-numpy</depend>
  <depend>python-imaging</depend>
  <depend>python-tensorflow-gpu-pip</depend>
  <depend>python-keras-pip</depend>
  <depend>python-opencv</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>rclpy</depend>
  <depend>cv_bridge</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
